--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "CrudFacturacion": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "CrudFacturacion"
+    }
+  },
+  "defaultProject": "CrudFacturacion",
+  "cli": {
+    "analytics": "e12d567a-fccb-40ba-9764-42ca81a64a49"
+  }
 }
