--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.7",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "ng-zorro-antd": "^10.2.2",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.12.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
